# pycific

./: LICENSE  README.md  pyproject.toml
pycific/: validated.py
pycific/immutable/: __init__.py
tests/: immutable_module.py  test_immutable_module.py  test_validated_pmap.py  test_validated_str.py
