[project]
name = "pycific"
version = "0.2.0"
description = "Pacific python programming via validation and immutability"
authors = [
    {name = "David Naughton"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyrsistent (>=0.20.0,<0.21.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "returns (>=0.26.0,<0.27.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
